--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,14 @@
+# remap prefix from 'C-b' to 'C-a'
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
+# split panes using | and -
+bind | split-window -h
+bind - split-window -v
+
+set-option -g allow-rename off
+
 # smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
@@ -18,6 +29,38 @@ bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
 set -g default-terminal "tmux-256color"
-#setw -g mouse on
-set -g mouse off
+
+set -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
+bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
+bind -T copy-mode-vi    C-WheelUpPane   send-keys -X halfpage-up
+bind -T copy-mode-vi    C-WheelDownPane send-keys -X halfpage-down
+bind -T copy-mode-emacs C-WheelUpPane   send-keys -X halfpage-up
+bind -T copy-mode-emacs C-WheelDownPane send-keys -X halfpage-down
+
+# To copy, left click and drag to highlight text in yellow, 
+# once you release left click yellow text will disappear and will automatically be available in clibboard
+# # Use vim keybindings in copy mode
+setw -g mode-keys vi
+# Update default binding of `Enter` to also use copy-pipe
+#unbind -T copy-mode-vi Enter
+#bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -sel c"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -i -sel p"
+
+# Double LMB Select & Copy (Word)
+bind-key -T copy-mode-vi DoubleClick1Pane select-pane \; send-keys -X select-word-no-clear \; run-shell "sleep .1s" \; send-keys -X copy-pipe-and-cancel "xclip -in -sel primary"
+bind-key -n DoubleClick1Pane select-pane \; copy-mode -M \; send-keys -X select-word \; run-shell "sleep .1s" \; send-keys -X copy-pipe-and-cancel "xclip -in -sel primary"
+#bind-key MouseDown3Pane run "xclip -out -selection primary | tmux load-buffer - ; tmux paste-buffer"
+
+# Triple LMB Select & Copy (Line)
+bind-key -T copy-mode-vi TripleClick1Pane select-pane \; send-keys -X select-line \; run-shell "sleep .1s" \; send-keys -X copy-pipe-and-cancel "xclip -in -sel primary"
+bind-key -n TripleClick1Pane select-pane \; copy-mode -M \; send-keys -X select-line \; run-shell "sleep .1s" \; send-keys -X copy-pipe-and-cancel "xclip -in -sel primary"
+
+bind R source-file ~/.tmux.conf \; display-message "Config reloaded..."
+
+
