--- a/.ssh/config
+++ b/.ssh/config
@@ -1,3 +1,6 @@
 Host github.com
-    User                    git
-    ProxyCommand            nc -x proxy.muc:8080 %h %p
+    Hostname ssh.github.com
+    ProxyCommand nc -X connect -x proxy.muc:8080 %h %p
+    Port 443
+    ServerAliveInterval 20
+    User git
