tmux add yank binding

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,6 +23,7 @@ bind - split-window -v
 bind R source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 setw -g mode-keys vi
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 run -b '~/.tmux/plugins/tpm/tpm'
 
