--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,10 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
 set -g @plugin 'egel/tmux-gruvbox'
+# set -g @plugin "arcticicestudio/nord-tmux"
 set -g @plugin 'christoomey/vim-tmux-navigator'
+
+set -g default-terminal "screen-256color"
 
 set -sg escape-time 10
 set-option -g allow-rename off
