--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,17 +2,17 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
-set -g @plugin 'egel/tmux-gruvbox'
-# set -g @plugin "arcticicestudio/nord-tmux"
+# set -g @plugin 'egel/tmux-gruvbox'
+set -g @plugin "arcticicestudio/nord-tmux"
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",*256col*:Tc"
 
 set -sg escape-time 10
 set-option -g allow-rename off
 set-option -g status-position top
 
-#set -g default-terminal "xterm-256color"
 
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
