--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,8 +2,10 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
-set -g @plugin 'egel/tmux-gruvbox'
+# set -g @plugin 'egel/tmux-gruvbox'
 # set -g @plugin "arcticicestudio/nord-tmux"
+set -g @plugin "alexander-born/everforest-tmux"
+
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 set -g default-terminal "xterm-256color"
