--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,6 +25,12 @@ bind-key C-a send-prefix
 bind | split-window -h
 bind - split-window -v
 
+# Resize the current pane using Alt + direction
+bind -n M-k resize-pane -U 5
+bind -n M-j resize-pane -D 5
+bind -n M-h resize-pane -L 5
+bind -n M-l resize-pane -R 5
+
 bind R source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 setw -g mode-keys vi
