vimwiki path, tmux resizing, ssh advantagedp aliases

--- a/.ssh/config
+++ b/.ssh/config
@@ -4,3 +4,11 @@ Host github.com
     Port 443
     ServerAliveInterval 20
     User git
+
+Host advantagedp
+  HostName bmwdpdesp000103.advantagedp.org
+  User aborn2
+
+Host advantagedp2
+  HostName bmwdpdesp000104.advantagedp.org
+  User aborn2
