Add mouse support to tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -33,6 +33,7 @@ bind -n M-l resize-pane -R 1
 
 bind R source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
+set -g mouse on
 setw -g mode-keys vi
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
