Add ssh alias for workstations

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -12,3 +12,11 @@ Host advantagedp
 Host advantagedp2
   HostName bmwdpdesp000104.advantagedp.org
   User aborn2
+
+Host novotny_workstation
+  HostName cmucw802730.muc
+  User q468975
+
+Host till_workstation
+  HostName cmucw802553.muc
+  User q492923
