--- a/bazel/.bazelrc
+++ b/bazel/.bazelrc
@@ -1,4 +1,5 @@
-build --remote_upload_local_results=false
+build --remote_upload_local_results=true
 build --disk_cache=/home/q456457/bazel_disk_cache
 build --experimental_strict_action_env
+build:adp_remote_cache_base --remote_cache=""
 
