--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,7 +8,8 @@ set -g @plugin "alexander-born/everforest-tmux"
 
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
-set -g default-terminal "xterm-256color"
+# set -g default-terminal "xterm-256color"
+set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 
 set -sg escape-time 10
