--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -27,10 +27,10 @@ bind | split-window -h
 bind - split-window -v
 
 # Resize the current pane using Alt + direction
-bind -n M-k resize-pane -U 1
-bind -n M-j resize-pane -D 1
-bind -n M-h resize-pane -L 1
-bind -n M-l resize-pane -R 1
+bind -n M-Up resize-pane -U 1
+bind -n M-Down resize-pane -D 1
+bind -n M-Left resize-pane -L 1
+bind -n M-Right resize-pane -R 1
 
 bind R source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
