--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -36,7 +36,11 @@ bind R source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 set -g mouse on
 setw -g mode-keys vi
+bind -T copy-mode-vi H send-keys ^
+bind -T copy-mode-vi L send-keys $
+bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind -T copy-mode-vi C-c send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 run -b '~/.tmux/plugins/tpm/tpm'
 
